Chapter 2 - Complete Entity Manager i Repozytoria

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,26 @@
 app.filename=data.csv
 sping.banner.location = logo-app.txt
 spring.profiles.active=dev
+
+
+spring.h2.console.enabled=true
+spring.security.user.name=user
+spring.security.user.password=password
+
+spring.datasource.password=password
+spring.datasource.username=user
+spring.datasource.url=jdbc:h2:mem:test;DATABASE_TO_UPPER=false
+
+
+
+spring.h2.console.settings.trace=false
+spring.h2.console.settings.web-allow-others=false
+spring.jpa.defer-datasource-initialization=true
+spring.datasource.driverClassName=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+spring.jpa.show-sql=true
+
+#DAO- miejsce do zapisania zapyta? dla bazy danych, warstwa po?rednicz?ca pomi?dzy baz? danych a aplikacj?
+#Repository- wzorzec projektowy, ma za zadanie odzwierciedlenie korzystania z bazy danych w taki sposób jakby?my korzystali ze zbioru
+#
